# Epigone

./: .gitignore  CONTEXT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: deploy.md  metrics.md  spec-defaults.md
docs/adr/: 0001-direct-hyperliquid-apis-over-bullpen-cli.md  0002-python-monolith-with-process-seams.md  0003-numbered-sql-migrations-at-startup.md  0004-direct-polymarket-apis-for-prediction-mode.md
docs/research/: ecosystem-survey.md  polymarket-spike.md
src/epigone/: __init__.py  allowlist.py  budget.py  clock.py  config.py  criteria_presets.py  criteria_store.py  (+6 more)
tests/: conftest.py  test_alert_controls.py  test_alert_controls_ux.py  test_alert_delivery.py  test_allowlist_store.py  test_bot_exclusion.py  test_bot_menu.py  test_coarse_metrics.py  test_coarse_scan.py  test_config.py  test_criteria_engine.py  test_criteria_presets.py  test_criteria_presets_ux.py  test_criteria_ux.py  test_delete_button.py  test_fine_metrics.py  test_fine_scan.py  test_first_data_notice.py  test_focus_market.py  test_focus_market_screener.py  test_focus_market_ux.py  test_follow_refresh.py  test_gate_hardening.py  test_gateway_http.py  test_gateway_http_parsing.py  test_gateway_seam.py  test_golden_wallets.py  test_health_checks.py  test_ingest_loop.py  test_invite_only.py  test_migrations.py  test_monitor_alerting.py  test_monitor_config.py  test_monitor_loop.py  test_open_orders_view.py  test_order_alert_delivery.py  test_order_poller.py  test_position_display.py  test_position_poller.py  test_recent_trades.py  (+12 more)
(+55 files in other folders)
