[project]
name = "epigone"
version = "0.1.0"
description = "Telegram bot that finds and tracks the best Hyperliquid perp traders — by your own criteria"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15",
    "aiohttp>=3.9",
    "asyncpg>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "mypy>=1.14",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epigone"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["epigone"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# aiogram's BaseSession interface mandates `timeout` parameters.
"tests/support/telegram.py" = ["ASYNC109"]
